# chommi

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: README.md  ci.yml
bets/: admin.py  celery.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
bets/migrations/: 0001_initial.py  0002_event_image.py  0003_event_creator.py  0004_alter_event_creator.py  0005_remove_event_is_active_remove_event_is_finished_and_more.py  0006_gambler_created_at_gambler_date_of_birth_and_more.py  0007_gambler_subscription_date.py  0008_alter_gambler_subscription_date.py  0009_gambler_status.py  0010_emailnotifications.py
bets/static/css/: custom.css
bets/templates/: about.html  base.html  contact.html  create_event.html  event_detail.html  event_list.html  home.html  my_bets.html  popular_events.html  privacy_policy.html  profile.html  signup.html
bets/templates/bets/: base.html  create_event.html  home.html  index.html
bets/templates/registration/: login.html  register.html
bets/templatetags/: form_filters.py
chommies/: asgi.py  settings.py  urls.py  wsgi.py
