[tool.poetry]
name = "chommies"
version = "0.1.0"
description = ""
authors = ["Manel Villar <manelvf@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
