[project]
name = "chommies"
version = "0.1.0"
description = "Chommies betting platform"
authors = [
    {name = "Manel Villar", email = "manelvf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "pillow>=11.1.0",
    "celery>=5.5.0",
    "redis>=5.2.1",
    "ipython>=9.1.0",
    "python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
